WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171108
<li> content inside <ul> should mid-word wrap when word-break: break-word is present.
https://bugs.webkit.org/show_bug.cgi?id=171108
Summary
<li> content inside <ul> should mid-word wrap when word-break: break-word is ...
alan
Reported
2017-04-21 03:21:09 PDT
Regressed at
https://trac.webkit.org/changeset/205374/webkit
Attachments
Patch
(4.75 KB, patch)
2017-04-21 03:23 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.36 KB, patch)
2017-04-21 09:41 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews126 for ios-simulator-wk2
(941.50 KB, application/zip)
2017-04-21 11:18 PDT
,
Build Bot
no flags
Details
Patch
(10.43 KB, patch)
2017-04-21 14:54 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-04-21 03:21:40 PDT
rdar://problem/30271747
alan
Comment 2
2017-04-21 03:23:22 PDT
Created
attachment 307716
[details]
Patch
alan
Comment 3
2017-04-21 09:41:51 PDT
Created
attachment 307740
[details]
Patch
Build Bot
Comment 4
2017-04-21 11:18:45 PDT
Comment on
attachment 307740
[details]
Patch
Attachment 307740
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3577121
New failing tests: fast/replaced/zero-width-image-force-linebreak.html
Build Bot
Comment 5
2017-04-21 11:18:46 PDT
Created
attachment 307754
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
alan
Comment 6
2017-04-21 14:54:07 PDT
Created
attachment 307813
[details]
Patch
WebKit Commit Bot
Comment 7
2017-04-21 19:01:58 PDT
Comment on
attachment 307813
[details]
Patch Clearing flags on attachment: 307813 Committed
r215660
: <
http://trac.webkit.org/changeset/215660
>
WebKit Commit Bot
Comment 8
2017-04-21 19:02:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug